src/test/deca/syntax/invalid/className-extends.synt
className-extends.deca:1:
